<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">@string/platform_name</string>
    <string name="app_shortcut_name" translatable="false">@string/shortcut_name</string>
    <string name="phonetic_app_name" translatable="false">@string/phonetic_platform_name</string>
    <string name="course_details_congratulations" translatable="false">Congratulations!</string>
    <string name="course_details_earned_cert" translatable="false">You’ve passed the content.</string>
    <string name="course_details_view_cert_button" translatable="false">View Certificate</string>
    <string name="enroll_now_button_text" translatable="false">Enroll now</string>
    <string name="invitation_only_button_text" translatable="false">Invitation only</string>
    <string name="effort_field_name" translatable="false">Effort:</string>
    <string name="go_to_video" translatable="false">Go to video</string>
    <string name="view_course_button_text" translatable="false">View content</string>
    <string name="you_are_now_enrolled" translatable="false">You are now enrolled in this content.</string>
    <string name="cannot_show_dashboard" translatable="false">Unable to show dashboard.</string>
    <string name="browse_by_subject" translatable="false">Browse by Subject</string>
    <string name="view_all_subjects" translatable="false">View All Subjects</string>
    <string name="search_subjects" translatable="false">Search Subject</string>
    <string name="share_course_button" translatable="false">Share your content</string>
    <string name="share_course_message" translatable="false">I’m taking a content on {platform_name}! Check it out:</string>
    <string name="settings_wifi_top" translatable="false">Wi-Fi only download</string>
    <string name="settings_wifi_bottom" translatable="false">Only download content when Wi-Fi is turned on</string>
    <string name="share_certificate_button" translatable="false">Share your certificate</string>
    <string name="share_certificate_message" translatable="false">I just earned a Certificate on {platform_name}! Check it out: {certificate_url}</string>
    <string name="tab_label_certificate" translatable="false">Certificate</string>
    <string name="need_data" translatable="false">This feature requires an active Internet connection.</string>
    <string name="email_username" translatable="false">User name or e-mail address</string>
    <string name="email" translatable="false">E-mail address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="login" translatable="false">Sign In</string>
    <string name="login_btn" translatable="false">Sign in button</string>
    <string name="progress_text" translatable="false">Please wait</string>
    <string name="signing_in" translatable="false">Signing In</string>
    <string name="error_message" translatable="false">Error Message</string>
    <string name="error_heading" translatable="false">The following error occurred while logging you in</string>
    <string name="login_failed" translatable="false">Please make sure that your user name or e-mail address and password are correct and try again.</string>
    <string name="by_creating_account" translatable="false">By creating an account, you agree to the {license} and {tos_and_honor_code} and acknowledge the {privacy_policy}</string>
    <string name="by_signing_in" translatable="false">By signing in to this app, you agree to the {license} and {tos_and_honor_code} and acknowledge the {privacy_policy}</string>
    <string name="licensing_agreement" translatable="false">{platform_name} End User License Agreement</string>
    <string name="tos_and_honor_code" translatable="false">{platform_name} Terms of Service and Honor Code</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="login_title" translatable="false">Sign In</string>
    <string name="close" translatable="false">Close</string>
    <string name="dropdown_list_prefix" translatable="false">Dropdown list.</string>
    <string name="label_current_downloads" translatable="false">View current downloads</string>
    <string name="open_profile_button" translatable="false">Open your profile</string>
    <string name="label_my_courses" translatable="false">Courses</string>
    <string name="label_my_programs" tools:ignore="MissingTranslation" translatable="false">Programs</string>
    <string name="label_find_courses" translatable="false">Find Courses</string>
    <string name="label_discover" translatable="false">Discover</string>
    <string name="label_discovery" translatable="false">Discovery</string>
    <string name="label_submit_feedback" translatable="false">Submit Feedback</string>
    <string name="label_change_program" translatable="false">Change Program</string>
    <string name="label_activate_tutorial" translatable="false">Help</string>
    <string name="toggle_turn_on" translatable="false">On</string>
    <string name="toggle_turn_off" translatable="false">Off</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="settings_txt" translatable="false">Settings</string>
    <string name="label_version" translatable="false">App Version</string>
    <string name="label_settings" translatable="false">Settings</string>
    <string name="title_account" translatable="false">Account</string>
    <string name="confirm_dialog_title_help" translatable="false">Reset Password</string>
    <string name="success_dialog_title_help" translatable="false">Password reset e-mail sent</string>
    <string name="title_reset_password_failed" translatable="false">Reset Password Error</string>
    <string name="wifi_dialog_title_help" translatable="false">Allow cellular download</string>
    <string name="success_dialog_message_help" translatable="false">We’ve sent a message with password reset instructions to your e-mail address.
        If you don’t see it in the next few minutes, make sure to check your spam folder.</string>
    <string name="confirm_dialog_message_help" translatable="false">Enter the e-mail address for your account, and we’ll send you instructions to reset your password.</string>
    <string name="wifi_dialog_message_help" translatable="false">Allow your device to download videos over your cellular connection when Wi-Fi is not available. Data charges may apply.</string>
    <plurals name="delete_video_snackbar_msg">
        <item quantity="one">%s video deleted</item>
        <item quantity="other">%s videos deleted</item>
    </plurals>
    <string name="leaving_app_data_title" translatable="false">Leaving the {platform_name} App</string>
    <string name="leaving_app_data_message" translatable="false">If you leave the app, you will no longer be viewing free {platform_name} content. Data charges may apply.</string>
    <string name="end_user_title" translatable="false">End User License Agreement</string>
    <string name="privacy_policy_title" translatable="false">@string/privacy_policy</string>
    <string name="terms_of_service_title" translatable="false">Terms of Service</string>
    <string-array name="spinner_classes">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
    </string-array>
    <string name="courseware_title" translatable="false">Course</string>
    <string name="courseware_subtitle" translatable="false">Access videos and assignments</string>
    <string name="videos_title" translatable="false">Videos</string>
    <string name="videos_subtitle" translatable="false">Watch content videos</string>
    <string name="discussion_title" translatable="false">Discussion</string>
    <string name="discussion_subtitle" translatable="false">Join the conversation</string>
    <string name="handouts_title" translatable="false">Handouts</string>
    <string name="handouts_subtitle" translatable="false">Find important content information</string>
    <string name="announcement_title" translatable="false">Announcements</string>
    <string name="course_dates_title" translatable="false">Important Dates</string>
    <string name="resources_title" translatable="false">Resources</string>
    <string name="announcement_subtitle" translatable="false">Keep up with the latest news</string>
    <string name="course_dates_subtitle" translatable="false">Keep track of deadlines and stay on track</string>
    <string name="course_name" translatable="false">Course Name</string>
    <string name="new_course_content" translatable="false">New Course Content</string>
    <string name="label_starting" translatable="false">Starting {date}</string>
    <string name="label_ended" translatable="false">Ended {date}</string>
    <string name="label_ending" translatable="false">Ending {date}</string>
    <string name="course_content" translatable="false">Course Content</string>
    <string name="tab_label_handouts" translatable="false">Handouts</string>
    <string name="last_accessed" translatable="false">Last Accessed</string>
    <string name="no_chapter_text" translatable="false">No content content is currently available.</string>
    <string name="no_videos_text" translatable="false">This content does not include any videos.</string>
    <string name="no_courses_to_display" translatable="false">It looks like you are not enrolled in any courses yet.</string>
    <string name="no_announcements_to_display" translatable="false">There are currently no announcements for this content.</string>
    <string name="no_handouts_to_display" translatable="false">There are currently no handouts for this content.</string>
    <string name="no_course_dates_to_display" translatable="false">Course dates are not currently available.</string>
    <string name="delete_videos_title" translatable="false">Delete Videos</string>
    <string name="due_date_today" translatable="false">due today at {due_date}</string>
    <string name="due_date_past_future" translatable="false">due {due_date}</string>
    <string name="discussion_topics_title" translatable="false">Discussion topics</string>
    <string name="topics_search" translatable="false">Search all posts</string>
    <string name="discussion_posts_search_title" translatable="false">Search content</string>
    <string name="discussion_posts_refine" translatable="false">Refine:</string>
    <string name="discussion_post_create_new_post" translatable="false">Create a new post</string>
    <string name="discussion_post_create_new_comment" translatable="false">@string/discussion_add_comment_title</string>
    <string name="discussion_posts_filter_all_posts" translatable="false">All Posts</string>
    <string name="discussion_posts_filter_unread_posts" translatable="false">Unread</string>
    <string name="discussion_posts_filter_unanswered_posts" translatable="false">Unanswered</string>
    <string name="profile_title" translatable="false">Profile</string>
    <string name="edit_user_profile_photo_crop_title" translatable="false">Crop and resize</string>
    <string name="edit_user_profile_photo_crop_cancel" translatable="false">Cancel</string>
    <string name="edit_user_profile_photo_crop_save" translatable="false">Choose</string>
    <string name="welcome_back">Welcome back</string>
    <string name="keep_up_the_spirit">Keep up the spirit</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="change_password">Change password</string>
    <string name="create_new_account">Create new account</string>
    <string name="reset_password" translatable="false">Reset Password</string>
    <string name="reset_password_msg">Enter phone number below to reset your password. You will receive a verification OTP via SMS.</string>
    <string name="verify" translatable="false">Verify</string>
</resources>