<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="SigninViewModel" />

        <import type="org.edx.mobile.tta.ui.login.view_model.SigninViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:text="@string/welcome_back"
                android:textColor="@color/primary_navy"
                android:textSize="20sp"
                android:fontFamily="@font/hind_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:text="@string/keep_up_the_spirit"
                android:textColor="@color/primary_navy"
                android:textSize="15sp"
                android:fontFamily="@font/hind_medium" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="40dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:text="@{viewModel.cellphone}"
                    android:textColorHint="@color/gray_1"
                    android:textColor="@color/gray_4"
                    android:textSize="14sp"
                    android:inputType="number"
                    android:fontFamily="@font/hind_medium"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="40dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text="@{viewModel.cellphone}"
                    android:textColorHint="@color/gray_1"
                    android:textColor="@color/gray_4"
                    android:textSize="14sp"
                    android:drawableEnd="@drawable/ic_visibility_gray_4_24dp"
                    android:inputType="textPassword"
                    android:fontFamily="@font/hind_medium"/>

            </android.support.design.widget.TextInputLayout>
            
            <Button
                android:layout_width="199dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:fontFamily="@font/hind_semibold"
                android:background="@drawable/btn_selector_filled"
                android:enabled="false"
                android:onClick="@{()->viewModel.login()}"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/gray_6"
                    android:textSize="12sp"
                    android:fontFamily="@font/hind_medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textColor="@color/primary_cyan"
                    android:textSize="12sp"
                    android:layout_marginStart="2dp"
                    android:fontFamily="@font/hind_medium"
                    android:onClick="@{()->viewModel.changePassword()}"/>

            </LinearLayout>

            <View
                android:layout_width="199dp"
                android:layout_height="1dp"
                android:background="@color/gray_1"
                android:layout_marginTop="34dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/gray_6"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/hind_medium"/>

            <Button
                android:layout_width="199dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/register"
                android:textColor="@color/primary_cyan"
                android:fontFamily="@font/hind_semibold"
                android:background="@drawable/btn_selector_hollow"
                android:layout_marginBottom="96dp"
                android:enabled="false"
                android:onClick="@{()->viewModel.register()}"/>

        </LinearLayout>

    </ScrollView>

</layout>