<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/humana_card_background">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_20px"
                    android:layout_marginBottom="@dimen/_8px"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/humana_logo"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:foregroundGravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:tint="@color/material_red_500"
                    android:focusable="true"
                    android:id="@+id/show_notifications"
                    app:srcCompat="@drawable/t_icon_notification"/>

            </RelativeLayout>
        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@drawable/edx_divider"
            android:orientation="vertical"
            android:background="@color/humana_card_background"
            android:paddingBottom="@dimen/widget_margin"
            android:showDividers="middle|end"
            android:splitMotionEvents="false">

            <TextView
                android:id="@+id/profile_btn"
                style="@style/account_option"
                android:text="@string/profile_title" />

            <TextView
                android:id="@+id/settings_btn"
                style="@style/account_option"
                android:text="@string/label_settings" />

            <TextView
                android:id="@+id/feedback_btn"
                style="@style/account_option"
                android:text="@string/label_submit_feedback" />
            <TextView
                android:id="@+id/change_prog_btn"
                style="@style/account_option"
                android:text="@string/label_change_program" />
            <TextView
                android:id="@+id/activate_tutorial_btn"
                style="@style/account_option"
                android:text="@string/label_activate_tutorial" />

            <TextView
                android:id="@+id/logout_btn"
                style="@style/account_option"
                android:text="@string/logout" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_version_no"
            style="@style/regular_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edx_margin"
            android:gravity="center_horizontal"
            android:textColor="@color/edx_brand_gray_base"
            android:textSize="@dimen/drawer_app_version_text"
            tools:text="Version Major.Minor.Patch" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
</layout>
